[package]
name = "multiplicity"
description = "A simple additively homomorphic multiset hash function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.11"

[dev-dependencies]
bls12_381 = "0.6.0"
