[package]
name = "multiplicity"
license = "MIT"
description = "A simple additively homomorphic multiset hash function"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/proxima-one/multiplicity/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.11"

[dev-dependencies]
bls12_381 = "0.6.0"
